# energy-data

./: pyproject.toml
energydata-master/: DATA_DICTIONARY.md  Messeinheiten_Glossary.md  Messobjekte_Glossary.md  donwsample.py  forecast_crac1.py  generate_plots.py
energydata-master/csv/: README.txt
