[tool.poetry]
name = "energieeinsparpotenziale"
version = "0.1.0"
description = ""
authors = ["michel1001 <michel.berwind@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
